--- a/index.html
+++ b/index.html
@@ -8,6 +8,68 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+<header>
     <h1>Daniel Fairchild's Portfolio</h1>
+    <span>Software Developer</span>
+</header>
+
+<main>
+    <section id="aboutUs">
+        <h2>About us</h2>
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </section>
+
+    <section id="ourProducts">
+       <h2> Our Products</h2>
+       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+    </p>
+    <div id="projects">
+    <article>
+     <h3>Project 1</h3>
+     <img src="./images/project1.jpg">
+     <p>
+        Project 1 description
+     </p>
+    </article>
+    <article>
+        <h3>Project 2</h3>
+        <img src="./images/project2.jpg">
+        <p>
+           Project 2 description
+        </p>
+       </article>    <article>
+        <h3>Project 3</h3>
+        <img src="./images/project3.jpg">
+        <p>
+           Project 3 description
+        </p>
+       </article>
+    </div>
+    </section>
+
+    <section i="getInTouch">
+        <h2>Get in Touch</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+        </p>
+        <ul>
+            <li>Email: d.e.fairchild@gmail.com</li>
+            <li>Phone: (330) 606-6958</li>
+        </ul>
+    </section>
+</main>
+
+<nav>
+    <a href="#aboutUs">About Us</a>
+    <a href="#ourProducts">Our Products</a>
+    <a href="#getInTouch">Get in Touch</a>
+</nav>
+
+<footer>
+    
+</footer>
+
 </body>
 </html>
