--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="carousel-container">
             <div class="carousel" id="carousel-1" auto-scroll="7000">
               <section class="carousel-screen">
-                <img src="./Images/PetTracker1.png" alt=""/>
+                <img src="./Images/PetTracker.png" alt="screen capture of pet tracker application"/>
                 <!-- <section class="text-container">
                   <p>Pet Health Tracker</p>
                   <p> An app to keep track of all of your pets medical information</p>
@@ -45,7 +45,7 @@
                 </section> -->
               </section>
               <section class="carousel-screen">
-                <img src="./Images/BrewstersBiscuits1.png" alt=""/>
+                <img src="./Images/BrewstersBiscuits.png" alt="screen capture of brewsters biscuits application"/>
                 <!-- <section class="text-container">
                   <p>Brewsters Biscuits</p>
                   <p>A basic click game inspired by Universal Paperclip</p>
@@ -53,7 +53,7 @@
                 </section> -->
               </section>
               <section class="carousel-screen">
-                <img src="./Images/AlbumCollection1.png" alt=""/>
+                <img src="./Images/AlbumCollection.png" alt="screen capture of album collection application"/>
                 <!-- <section class="text-container">
                   <p>Album Collections </p>
                   <p>Simple user interface to review your favourite artists, albums and songs.</p>
@@ -61,7 +61,7 @@
                 </section> -->
               </section>
             <section class="carousel-screen">
-              <img src="./Images/MovieReview1.png" alt=""/>
+              <img src="./Images/MovieReview.png" alt="screen capture of movie review application"/>
               <!-- <section class="text-container">
                 <p>Movie Review Application</p>
                 <p>A site where users can review movies </p>
