added @media settings

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="headerBackground">
 <header>
     <h1>Daniel Fairchild</h1>
-    <span>Software Developer</span>
+    <h3>Software Developer</h3>
 </header>
 </div>
 
@@ -28,6 +28,7 @@
         </div>
         <div id="aboutMePic">
             <img id="cultLeader"src="./Images/cult_leader_round.png">
+        </div>
         </div>
     </section>
     
